src/objects/RT1__ReadyTalkMeeting__c.object
<CustomObject>
    <fields>
        <fullName>RT1__AccessCode__c</fullName>
        <label>Access Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__AllowOthersToInvite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Others To Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__AttendedMeetingMembers__c</fullName>
        <label>Attended Meeting Members</label>
        <summaryFilterItems>
            <field>RT1__ReadyTalkMeetingMember__c.RT1__Status__c</field>
            <operation>equals</operation>
            <value>Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>RT1__ReadyTalkMeetingMember__c.RT1__ReadyTalkMeeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RT1__BadEmailMeetingMembers__c</fullName>
        <label>Bad Email Meeting Members</label>
        <summaryFilterItems>
            <field>RT1__ReadyTalkMeetingMember__c.RT1__Status__c</field>
            <operation>equals</operation>
            <value>Email Failure: Address Error</value>
        </summaryFilterItems>
        <summaryForeignKey>RT1__ReadyTalkMeetingMember__c.RT1__ReadyTalkMeeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RT1__BatchId__c</fullName>
        <label>Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__CCMeetingStatus__c</fullName>
        <label>Meeting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT1__CampaignSyncStarted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a campaign sync has started. This field is not intended to be visible to users.</description>
        <inlineHelpText>Indicates that a campaign sync has started. This field is not intended to be visible to users.</inlineHelpText>
        <label>Campaign Sync Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>ReadyTalk Meetings</relationshipLabel>
        <relationshipName>ReadyTalkMeetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RT1__ConfirmedMeetingMembers__c</fullName>
        <label>Confirmed Meeting Members</label>
        <summaryFilterItems>
            <field>RT1__ReadyTalkMeetingMember__c.RT1__Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>RT1__ReadyTalkMeetingMember__c.RT1__ReadyTalkMeeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RT1__CreateNewLeads__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create New Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__CurrentRegistrationBatchStarted__c</fullName>
        <label>CurrentRegistrationBatchStarted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__CurrentSyncStarted__c</fullName>
        <label>Current Sync Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__DataSynchronizationPreferences__c</fullName>
        <label>Data Synchronization Preferences</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leave as Default</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT1__DeclinedMeetingMembers__c</fullName>
        <label>Declined Meeting Members</label>
        <summaryFilterItems>
            <field>RT1__ReadyTalkMeetingMember__c.RT1__Status__c</field>
            <operation>equals</operation>
            <value>Declined</value>
        </summaryFilterItems>
        <summaryForeignKey>RT1__ReadyTalkMeetingMember__c.RT1__ReadyTalkMeeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RT1__Duration__c</fullName>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__EncodedMeetingID__c</fullName>
        <label>EncodedMeetingID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__HostName__c</fullName>
        <label>Host Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__InvitedMeetingMembers__c</fullName>
        <label>Invited Meeting Members</label>
        <summaryFilterItems>
            <field>RT1__ReadyTalkMeetingMember__c.RT1__Status__c</field>
            <operation>equals</operation>
            <value>Invited</value>
        </summaryFilterItems>
        <summaryForeignKey>RT1__ReadyTalkMeetingMember__c.RT1__ReadyTalkMeeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RT1__LastSyncCompleted__c</fullName>
        <label>Last Sync Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__LastSyncStarted__c</fullName>
        <label>Last Sync Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__LeadAssignmentBehavior__c</fullName>
        <label>Lead Assignment Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assign to another user</fullName>
                </value>
                <value>
                    <fullName>Use lead assignment rule</fullName>
                </value>
                <value>
                    <fullName>Assign to self</fullName>
                    <default>true</default>
                    <label>Assign to self</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT1__LeadAssignmentRuleId__c</fullName>
        <label>Lead Assignment Rule Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__LeadOwnerId__c</fullName>
        <label>Lead Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__LeadSource__c</fullName>
        <description>This value will populate the Lead Source field on new Leads</description>
        <inlineHelpText>This value will populate the Lead Source field on new Leads</inlineHelpText>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__MeetingDateTime__c</fullName>
        <label>Meeting Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__MeetingID__c</fullName>
        <label>Meeting ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__MeetingTimeNative__c</fullName>
        <description>This time is in the Meeting&apos;s native time zone.</description>
        <label>Date &amp; Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__MeetingType__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__MeetingURL__c</fullName>
        <label>Meeting URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RT1__Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT1__NewMeetingMembers__c</fullName>
        <label>New Meeting Members</label>
        <summaryFilterItems>
            <field>RT1__ReadyTalkMeetingMember__c.RT1__Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>RT1__ReadyTalkMeetingMember__c.RT1__ReadyTalkMeeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RT1__NextMemberIndex__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Next Member Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RT1__OptOutMeetingMembers__c</fullName>
        <label>Opt Out Meeting Members</label>
        <summaryFilterItems>
            <field>RT1__ReadyTalkMeetingMember__c.RT1__Status__c</field>
            <operation>equals</operation>
            <value>Email Failure: Opt-Out</value>
        </summaryFilterItems>
        <summaryForeignKey>RT1__ReadyTalkMeetingMember__c.RT1__ReadyTalkMeeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RT1__Passcode__c</fullName>
        <label>Passcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__PendingMeetingMembers__c</fullName>
        <label>Pending Meeting Members</label>
        <summaryFilterItems>
            <field>RT1__ReadyTalkMeetingMember__c.RT1__Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>RT1__ReadyTalkMeetingMember__c.RT1__ReadyTalkMeeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RT1__PollQuestionIds__c</fullName>
        <label>PollQuestionIds</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RT1__PurchaseOrder__c</fullName>
        <label>Purchase Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__RegistrationURL__c</fullName>
        <label>Registration URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RT1__ScheduledForImport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ScheduledForImport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__TimeZoneDB__c</fullName>
        <label>TimeZoneDB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa/Abidjan</fullName>
                </value>
                <value>
                    <fullName>Africa/Accra</fullName>
                </value>
                <value>
                    <fullName>Africa/Addis_Ababa</fullName>
                </value>
                <value>
                    <fullName>Africa/Algiers</fullName>
                </value>
                <value>
                    <fullName>Africa/Asmara</fullName>
                </value>
                <value>
                    <fullName>Africa/Bamako</fullName>
                </value>
                <value>
                    <fullName>Africa/Bangui</fullName>
                </value>
                <value>
                    <fullName>Africa/Banjul</fullName>
                </value>
                <value>
                    <fullName>Africa/Bissau</fullName>
                </value>
                <value>
                    <fullName>Africa/Blantyre</fullName>
                </value>
                <value>
                    <fullName>Africa/Brazzaville</fullName>
                </value>
                <value>
                    <fullName>Africa/Bujumbura</fullName>
                </value>
                <value>
                    <fullName>Africa/Cairo</fullName>
                </value>
                <value>
                    <fullName>Africa/Casablanca</fullName>
                </value>
                <value>
                    <fullName>Africa/Ceuta</fullName>
                </value>
                <value>
                    <fullName>Africa/Conakry</fullName>
                </value>
                <value>
                    <fullName>Africa/Dakar</fullName>
                </value>
                <value>
                    <fullName>Africa/Dar_es_Salaam</fullName>
                </value>
                <value>
                    <fullName>Africa/Djibouti</fullName>
                </value>
                <value>
                    <fullName>Africa/Douala</fullName>
                </value>
                <value>
                    <fullName>Africa/El_Aaiun</fullName>
                </value>
                <value>
                    <fullName>Africa/Freetown</fullName>
                </value>
                <value>
                    <fullName>Africa/Gaborone</fullName>
                </value>
                <value>
                    <fullName>Africa/Harare</fullName>
                </value>
                <value>
                    <fullName>Africa/Johannesburg</fullName>
                </value>
                <value>
                    <fullName>Africa/Juba</fullName>
                </value>
                <value>
                    <fullName>Africa/Kampala</fullName>
                </value>
                <value>
                    <fullName>Africa/Khartoum</fullName>
                </value>
                <value>
                    <fullName>Africa/Kigali</fullName>
                </value>
                <value>
                    <fullName>Africa/Kinshasa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT1__TimeZone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa/Abidjan</fullName>
                </value>
                <value>
                    <fullName>Africa/Accra</fullName>
                </value>
                <value>
                    <fullName>Africa/Addis_Ababa</fullName>
                </value>
                <value>
                    <fullName>Africa/Algiers</fullName>
                </value>
                <value>
                    <fullName>Africa/Asmara</fullName>
                </value>
                <value>
                    <fullName>Africa/Bamako</fullName>
                </value>
                <value>
                    <fullName>Africa/Bangui</fullName>
                </value>
                <value>
                    <fullName>Africa/Banjul</fullName>
                </value>
                <value>
                    <fullName>Africa/Bissau</fullName>
                </value>
                <value>
                    <fullName>Africa/Blantyre</fullName>
                </value>
                <value>
                    <fullName>Africa/Brazzaville</fullName>
                </value>
                <value>
                    <fullName>Africa/Bujumbura</fullName>
                </value>
                <value>
                    <fullName>Africa/Cairo</fullName>
                </value>
                <value>
                    <fullName>Africa/Casablanca</fullName>
                </value>
                <value>
                    <fullName>Africa/Ceuta</fullName>
                </value>
                <value>
                    <fullName>Africa/Conakry</fullName>
                </value>
                <value>
                    <fullName>Africa/Dakar</fullName>
                </value>
                <value>
                    <fullName>Africa/Dar_es_Salaam</fullName>
                </value>
                <value>
                    <fullName>Africa/Djibouti</fullName>
                </value>
                <value>
                    <fullName>Africa/Douala</fullName>
                </value>
                <value>
                    <fullName>Africa/El_Aaiun</fullName>
                </value>
                <value>
                    <fullName>Africa/Freetown</fullName>
                </value>
                <value>
                    <fullName>Africa/Gaborone</fullName>
                </value>
                <value>
                    <fullName>Africa/Harare</fullName>
                </value>
                <value>
                    <fullName>Africa/Johannesburg</fullName>
                </value>
                <value>
                    <fullName>Africa/Juba</fullName>
                </value>
                <value>
                    <fullName>Africa/Kampala</fullName>
                </value>
                <value>
                    <fullName>Africa/Khartoum</fullName>
                </value>
                <value>
                    <fullName>Africa/Kigali</fullName>
                </value>
                <value>
                    <fullName>Africa/Kinshasa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT1__TollFreeNumber__c</fullName>
        <label>Toll Free Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RT1__UnmatchedRegistrants__c</fullName>
        <label>Unmatched Registrants</label>
        <summaryFilterItems>
            <field>RT1__ReadyTalkMeetingMember__c.RT1__Unmatched__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>RT1__ReadyTalkMeetingMember__c.RT1__ReadyTalkMeeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RT1__UpdateExistingPeople__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Existing People</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__ViewMeetingDetails__c</fullName>
        <description>This field will store the URL to the ReadyTalk Meeting details that are passed back from ReadyTalk when the Salesforce ReadyTalk Meeting is synced with ReadyTalk Conference Center.</description>
        <label>View Meeting Details</label>
        <type>Url</type>
    </fields>
    <label>ReadyTalk Meeting</label>
    <listViews>
        <fullName>RT1__AllMeetings</fullName>
        <columns>NAME</columns>
        <columns>RT1__MeetingDateTime__c</columns>
        <columns>RT1__CCMeetingStatus__c</columns>
        <columns>RT1__InvitedMeetingMembers__c</columns>
        <columns>RT1__ConfirmedMeetingMembers__c</columns>
        <columns>RT1__AttendedMeetingMembers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Meetings</label>
    </listViews>
    <listViews>
        <fullName>RT1__AllUpcomingMeetings</fullName>
        <columns>NAME</columns>
        <columns>RT1__MeetingDateTime__c</columns>
        <columns>RT1__CCMeetingStatus__c</columns>
        <columns>RT1__InvitedMeetingMembers__c</columns>
        <columns>RT1__ConfirmedMeetingMembers__c</columns>
        <columns>RT1__AttendedMeetingMembers__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RT1__CCMeetingStatus__c</field>
            <operation>equals</operation>
            <value>New,Scheduled</value>
        </filters>
        <label>All Upcoming Meetings</label>
    </listViews>
    <listViews>
        <fullName>RT1__MyMeetings</fullName>
        <columns>NAME</columns>
        <columns>RT1__MeetingDateTime__c</columns>
        <columns>RT1__CCMeetingStatus__c</columns>
        <columns>RT1__InvitedMeetingMembers__c</columns>
        <columns>RT1__ConfirmedMeetingMembers__c</columns>
        <columns>RT1__AttendedMeetingMembers__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Meetings</label>
    </listViews>
    <listViews>
        <fullName>RT1__MyUpcomingMeetings</fullName>
        <columns>NAME</columns>
        <columns>RT1__MeetingDateTime__c</columns>
        <columns>RT1__CCMeetingStatus__c</columns>
        <columns>RT1__InvitedMeetingMembers__c</columns>
        <columns>RT1__ConfirmedMeetingMembers__c</columns>
        <columns>RT1__AttendedMeetingMembers__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RT1__CCMeetingStatus__c</field>
            <operation>equals</operation>
            <value>New,Scheduled</value>
        </filters>
        <label>My Upcoming Meetings</label>
    </listViews>
    <nameField>
        <label>Meeting Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReadyTalk Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>